--- a/OnlineExamination/OnlineExamination.csproj
+++ b/OnlineExamination/OnlineExamination.csproj
@@ -6,16 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="OnlineExam.Application\ManageUsers\**" />
+    <Compile Remove="Application\ManageUsers\**" />
     <Compile Remove="Pages\Manager\**" />
     <Compile Remove="Pages\User\**" />
-    <Content Remove="OnlineExam.Application\ManageUsers\**" />
+    <Content Remove="Application\ManageUsers\**" />
     <Content Remove="Pages\Manager\**" />
     <Content Remove="Pages\User\**" />
-    <EmbeddedResource Remove="OnlineExam.Application\ManageUsers\**" />
+    <EmbeddedResource Remove="Application\ManageUsers\**" />
     <EmbeddedResource Remove="Pages\Manager\**" />
     <EmbeddedResource Remove="Pages\User\**" />
-    <None Remove="OnlineExam.Application\ManageUsers\**" />
+    <None Remove="Application\ManageUsers\**" />
     <None Remove="Pages\Manager\**" />
     <None Remove="Pages\User\**" />
   </ItemGroup>
